# rpi-facialrecog

./: README.md
camcv/: CMakeCache.txt  CMakeLists.txt  Makefile  Notes.txt  camcv  camcv_vid0  camcv_vid0.c  camcv_vid1  camcv_vid1.cpp  camcvcopy  cmake_install.cmake  myCsv.csv  secCsv.csv  secEntry  secEntry.cpp  waynePi_IO.cpp  waynePi_IO.hpp
